src/greeting-app/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: greeting-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.local
      http:
        paths:
          - path: /api/greetings
            backend:
              serviceName: greeting-app
              servicePort: 80
